[package]
name = "push2-lightshow"
version = "0.1.0"
authors = ["Fumiaki Kinoshita <fumiexcel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
push2_display = { git = "https://github.com/mbracher/push2_display" }
embedded-graphics = "0.7.0-alpha.2"
midir = { version = "0.7", features = ["winrt"] }
midly = "*"
rand = "*"
palette = "0.5"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
regex = "1.4"